--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </tr>
     <tr>
       <td>2019-2020</td>
-      <td>Trnaslator at Su Intellectual Property</td>
+      <td>Translator at Su Intellectual Property</td>
     </tr>
     <tr>
       <td>2017-2018</td>
