--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </table>
   <hr>
   <a href="hobbies.html">My Hobbies</a>
-  <a href="contactme.html">Contact Me Details</a>
+  <a href="contactme.html">Contact Me</a>
 </body>
 
 </html>
